[package]
name = "rust-minilzo"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "Pure Rust implementation of minilzo; initially created with c2rust."

[lib]
name = "rust_minilzo"

[dependencies]
libc = "0.2"
